Updated with new Initialize method.  Runs correctly with modified age-only-cohorts.  BaseCohortsSiteVar excluded for age-only succession.
git-svn-id: http://Marc-PC/svn/Full@78 85f15e0e-5137-b144-a863-98bd542365a3

--- a/trunk/age-only-succession/trunk/src/age only successsion.csproj
+++ b/trunk/age-only-succession/trunk/src/age only successsion.csproj
@@ -41,7 +41,8 @@
     <Reference Include="Landis.Library.AgeOnlyCohorts">
       <HintPath>C:\Program Files\LANDIS-II\6.0\bin\Landis.Library.AgeOnlyCohorts.dll</HintPath>
     </Reference>
-    <Reference Include="Landis.Library.Cohorts">
+    <Reference Include="Landis.Library.Cohorts, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>C:\Program Files\LANDIS-II\6.0\bin\Landis.Library.Cohorts.dll</HintPath>
     </Reference>
     <Reference Include="Landis.Library.Succession">
@@ -61,7 +62,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseCohortsSiteVar.cs" />
     <Compile Include="EcoregionAuxParm.cs" />
     <Compile Include="IInputParameters.cs" />
     <Compile Include="InputParameters.cs" />
