Updated with new Initialize method.  Runs correctly with modified age-only-cohorts and biomass-cohorts. Not yet tested with disturbance.
git-svn-id: http://Marc-PC/svn/Full@79 85f15e0e-5137-b144-a863-98bd542365a3

--- a/trunk/biomass-succession/trunk/src/biomass-succession.csproj
+++ b/trunk/biomass-succession/trunk/src/biomass-succession.csproj
@@ -72,7 +72,9 @@
     <Compile Include="age-only-disturbances\ParameterDataset.cs" />
     <Compile Include="age-only-disturbances\PercentageTable.cs" />
     <Compile Include="age-only-disturbances\PoolPercentages.cs" />
-    <Compile Include="BaseCohortsSiteVar.cs" />
+    <Compile Include="BaseCohortsSiteVar.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="CohortBiomass.cs" />
     <Compile Include="EcoregionData.cs" />
     <Compile Include="ForestFloor.cs" />
