--- a/trunk/biomass-succession/trunk/src/biomass-succession.csproj
+++ b/trunk/biomass-succession/trunk/src/biomass-succession.csproj
@@ -101,6 +101,9 @@
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>copy $(TargetName).* "C:\Program Files\LANDIS-II\6.0\bin"</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
