Converted *Pixel to UIntPixel to resolve problems with reading in legacy raster files.
git-svn-id: http://Marc-PC/svn/Full@259 85f15e0e-5137-b144-a863-98bd542365a3

--- a/trunk/biomass-succession/trunk/src/biomass-succession.csproj
+++ b/trunk/biomass-succession/trunk/src/biomass-succession.csproj
@@ -96,7 +96,7 @@
     </Compile>
     <Compile Include="utility\MapNames.cs" />
     <Compile Include="utility\SpeciesAuxParm.cs" />
-    <Compile Include="utility\UShortPixel.cs" />
+    <Compile Include="utility\UIntPixel.cs" />
     <Compile Include="utility\Util.cs" />
   </ItemGroup>
   <ItemGroup />
