Converted UShortPixel to ShortPixel.cs
git-svn-id: http://Marc-PC/svn/Full@360 85f15e0e-5137-b144-a863-98bd542365a3

--- a/trunk/Century-succession/branches/version-3/century-succession.csproj
+++ b/trunk/Century-succession/branches/version-3/century-succession.csproj
@@ -115,7 +115,7 @@
     <Compile Include="utility\InputParameters.cs" />
     <Compile Include="utility\MapNames.cs" />
     <Compile Include="utility\Species_AuxParm.cs" />
-    <Compile Include="utility\UShortPixel.cs" />
+    <Compile Include="utility\ShortPixel.cs" />
     <Compile Include="utility\Util.cs" />
     <Compile Include="WoodLayer.cs" />
   </ItemGroup>
