--- a/trunk/age-only-succession/trunk/src/age only successsion.csproj
+++ b/trunk/age-only-succession/trunk/src/age only successsion.csproj
@@ -62,6 +62,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DynamicInputParser.cs" />
+    <Compile Include="DynamicInputRecord.cs" />
+    <Compile Include="DynamicInputs.cs" />
     <Compile Include="EcoregionAuxParm.cs" />
     <Compile Include="IInputParameters.cs" />
     <Compile Include="InputParameters.cs" />
@@ -69,6 +72,7 @@
     <Compile Include="PlugIn.cs" />
     <Compile Include="SiteVars.cs" />
     <Compile Include="SpeciesAuxParm.cs" />
+    <Compile Include="SpeciesData.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
