Added a probEstablishAdjust factor to re-scale the probability of establishment in the case that you are running at a time step smaller than your climate inputs.  This parameters is optional and defaults to 1.0.
git-svn-id: http://Marc-PC/svn/Full@540 85f15e0e-5137-b144-a863-98bd542365a3

--- a/trunk/Century-succession/branches/version-3/century-succession.csproj
+++ b/trunk/Century-succession/branches/version-3/century-succession.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>century_succession</RootNamespace>
-    <AssemblyName>Landis.Extension.Succession.Centuryv3</AssemblyName>
+    <AssemblyName>Landis.Extension.Succession.Century</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
