Partial work on harvest effects.
git-svn-id: http://Marc-PC/svn/Full@559 85f15e0e-5137-b144-a863-98bd542365a3

--- a/trunk/Century-succession/branches/version-3/century-succession.csproj
+++ b/trunk/Century-succession/branches/version-3/century-succession.csproj
@@ -76,6 +76,7 @@
     <Compile Include="dynamic-change\BiomassParametersParser.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="HarvestEffects.cs" />
     <Compile Include="utility\BaseCohortsSiteVar.cs" />
     <Compile Include="Century.cs" />
     <Compile Include="CohortBiomass.cs" />
