--- a/trunk/Century-succession/branches/version-3/century-succession.csproj
+++ b/trunk/Century-succession/branches/version-3/century-succession.csproj
@@ -77,6 +77,9 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="HarvestEffects.cs" />
+    <Compile Include="LitterType.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="utility\BaseCohortsSiteVar.cs" />
     <Compile Include="Century.cs" />
     <Compile Include="CohortBiomass.cs" />
@@ -94,7 +97,6 @@
     <Compile Include="InitialBiomass.cs" />
     <Compile Include="Layer.cs" />
     <Compile Include="LitterLayer.cs" />
-    <Compile Include="LitterType.cs" />
     <Compile Include="OtherData.cs" />
     <Compile Include="Outputs.cs" />
     <Compile Include="PlugIn.cs" />
