--- a/trunk/Century-succession/trunk/src/century-succession.csproj
+++ b/trunk/Century-succession/trunk/src/century-succession.csproj
@@ -26,40 +26,35 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>c:\program files\landis-ii\6.0\bin\</OutputPath>
+    <OutputPath>C:\Program Files\LANDIS-II\6.0\bin\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Edu.Wisc.Forest.Flel.Util">
-      <HintPath>C:\Program Files\LANDIS-II\6.0\bin\Edu.Wisc.Forest.Flel.Util.dll</HintPath>
+      <HintPath>..\..\..\..\..\Program Files\LANDIS-II\bin\Edu.Wisc.Forest.Flel.Util.dll</HintPath>
     </Reference>
     <Reference Include="Landis.Core">
       <HintPath>C:\Program Files\LANDIS-II\6.0\bin\Landis.Core.dll</HintPath>
     </Reference>
-    <Reference Include="Landis.Library.AgeOnlyCohorts, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Program Files\LANDIS-II\6.0\bin\Landis.Library.AgeOnlyCohorts.dll</HintPath>
+    <Reference Include="Landis.Library.AgeOnlyCohorts">
+      <HintPath>bin\Landis.Library.AgeOnlyCohorts.dll</HintPath>
     </Reference>
-    <Reference Include="Landis.Library.Climate, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Program Files\LANDIS-II\6.0\bin\Landis.Library.Climate.dll</HintPath>
+    <Reference Include="Landis.Library.Climate">
+      <HintPath>bin\Landis.Library.Climate.dll</HintPath>
     </Reference>
-    <Reference Include="Landis.Library.Cohorts, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Program Files\LANDIS-II\6.0\bin\Landis.Library.Cohorts.dll</HintPath>
+    <Reference Include="Landis.Library.Cohorts">
+      <HintPath>bin\Landis.Library.Cohorts.dll</HintPath>
     </Reference>
-    <Reference Include="Landis.Library.LeafBiomassCohorts, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Program Files\LANDIS-II\6.0\bin\Landis.Library.LeafBiomassCohorts.dll</HintPath>
+    <Reference Include="Landis.Library.LeafBiomassCohorts">
+      <HintPath>bin\Landis.Library.LeafBiomassCohorts.dll</HintPath>
     </Reference>
     <Reference Include="Landis.Library.Succession">
-      <HintPath>C:\Program Files\LANDIS-II\6.0\bin\Landis.Library.Succession.dll</HintPath>
+      <HintPath>bin\Landis.Library.Succession.dll</HintPath>
     </Reference>
-    <Reference Include="Landis.SpatialModeling, Version=1.0.4023.30148, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Program Files\LANDIS-II\6.0\bin\Landis.SpatialModeling.dll</HintPath>
+    <Reference Include="Landis.SpatialModeling">
+      <HintPath>bin\Landis.SpatialModeling.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -81,6 +76,10 @@
     <Compile Include="dynamic-change\BiomassParametersParser.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="HarvestEffects.cs" />
+    <Compile Include="LitterType.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="utility\BaseCohortsSiteVar.cs" />
     <Compile Include="Century.cs" />
     <Compile Include="CohortBiomass.cs" />
@@ -98,7 +97,6 @@
     <Compile Include="InitialBiomass.cs" />
     <Compile Include="Layer.cs" />
     <Compile Include="LitterLayer.cs" />
-    <Compile Include="LitterType.cs" />
     <Compile Include="OtherData.cs" />
     <Compile Include="Outputs.cs" />
     <Compile Include="PlugIn.cs" />
@@ -113,9 +111,10 @@
     <Compile Include="utility\IInputParameters.cs" />
     <Compile Include="utility\InputParameterParser.cs" />
     <Compile Include="utility\InputParameters.cs" />
+    <Compile Include="utility\IntPixel.cs" />
     <Compile Include="utility\MapNames.cs" />
     <Compile Include="utility\Species_AuxParm.cs" />
-    <Compile Include="utility\UShortPixel.cs" />
+    <Compile Include="utility\ShortPixel.cs" />
     <Compile Include="utility\Util.cs" />
     <Compile Include="WoodLayer.cs" />
   </ItemGroup>
