--- a/trunk/biomass-succession/trunk/src/biomass-succession.csproj
+++ b/trunk/biomass-succession/trunk/src/biomass-succession.csproj
@@ -96,7 +96,7 @@
     </Compile>
     <Compile Include="utility\MapNames.cs" />
     <Compile Include="utility\SpeciesAuxParm.cs" />
-    <Compile Include="utility\UIntPixel.cs" />
+    <Compile Include="utility\IntPixel.cs" />
     <Compile Include="utility\Util.cs" />
   </ItemGroup>
   <ItemGroup />
