Commit: Century is now able to read in the spin-up climate data.
git-svn-id: http://Marc-PC/svn/Full@1242 85f15e0e-5137-b144-a863-98bd542365a3

--- a/trunk/Century-succession/branches/amin-century/century-succession.csproj
+++ b/trunk/Century-succession/branches/amin-century/century-succession.csproj
@@ -51,6 +51,9 @@
     <Reference Include="Landis.Library.LeafBiomassCohorts">
       <HintPath>C:\Program Files\LANDIS-II\v6\bin\extensions\Landis.Library.LeafBiomassCohorts.dll</HintPath>
     </Reference>
+    <Reference Include="Landis.Library.Metadata">
+      <HintPath>..\..\..\..\..\Program Files\LANDIS-II\v6\bin\Landis.Library.Metadata.dll</HintPath>
+    </Reference>
     <Reference Include="Landis.Library.Succession">
       <HintPath>C:\Program Files\LANDIS-II\v6\bin\extensions\Landis.Library.Succession.dll</HintPath>
     </Reference>
@@ -59,6 +62,8 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="age-only-disturbances\DatasetParser.cs" />
@@ -77,6 +82,7 @@
     <Compile Include="LitterType.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="metadata\MonthlyLog.cs" />
     <Compile Include="utility\BaseCohortsSiteVar.cs" />
     <Compile Include="Century.cs" />
     <Compile Include="CohortBiomass.cs" />
@@ -110,6 +116,7 @@
     <Compile Include="utility\InputParameters.cs" />
     <Compile Include="utility\IntPixel.cs" />
     <Compile Include="utility\MapNames.cs" />
+    <Compile Include="metadata\MetadataHandler.cs" />
     <Compile Include="utility\Species_AuxParm.cs" />
     <Compile Include="utility\ShortPixel.cs" />
     <Compile Include="utility\Util.cs" />
