--- a/trunk/Century-succession/branches/amin-century/century-succession.csproj
+++ b/trunk/Century-succession/branches/amin-century/century-succession.csproj
@@ -50,7 +50,8 @@
     <Reference Include="Landis.Library.LeafBiomassCohorts">
       <HintPath>C:\Program Files\LANDIS-II\v6\bin\extensions\Landis.Library.LeafBiomassCohorts.dll</HintPath>
     </Reference>
-    <Reference Include="Landis.Library.Metadata">
+    <Reference Include="Landis.Library.Metadata, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\Program Files\LANDIS-II\v6\bin\Landis.Library.Metadata.dll</HintPath>
     </Reference>
     <Reference Include="Landis.Library.Succession">
