Updates to the Metadata library.
git-svn-id: http://Marc-PC/svn/Full@1455 85f15e0e-5137-b144-a863-98bd542365a3

--- a/trunk/Century-succession/branches/amin-century/century-succession.csproj
+++ b/trunk/Century-succession/branches/amin-century/century-succession.csproj
@@ -51,8 +51,9 @@
     <Reference Include="Landis.Library.LeafBiomassCohorts">
       <HintPath>C:\Program Files\LANDIS-II\v6\bin\extensions\Landis.Library.LeafBiomassCohorts.dll</HintPath>
     </Reference>
-    <Reference Include="Landis.Library.Metadata">
-      <HintPath>..\..\..\..\..\Program Files\LANDIS-II\v6\bin\extensions\Landis.Library.Metadata.dll</HintPath>
+    <Reference Include="Landis.Library.Metadata, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Program Files\LANDIS-II\v6\bin\extensions\Landis.Library.Metadata.dll</HintPath>
     </Reference>
     <Reference Include="Landis.Library.Succession">
       <HintPath>C:\Program Files\LANDIS-II\v6\bin\extensions\Landis.Library.Succession.dll</HintPath>
